--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
 
 	<groupId>com.example</groupId>
 	<artifactId>PayRoll</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<version>1.0.0</version>
+	<packaging>war</packaging>
 
 	<name>PayRoll</name>
 	<description>Demo project for Spring Boot</description>
