--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #server.port=8090
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://pocdemo.c7cyovgwfehj.us-east-1.rds.amazonaws.com:3306/payroll?useSSL=false
+spring.datasource.url = jdbc:mysql://pocdemo.c7cyovgwfehj.us-east-1.rds.amazonaws.com:3306/payroll
 spring.datasource.username = jarvis12345
 spring.datasource.password = iamhappy1995
 
@@ -14,3 +14,4 @@ spring.jpa.hibernate.ddl-auto = create-drop
 
 redis.port=6379
 redis.host=localhost
+#hello
