--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,9 @@
 spring.datasource.url = jdbc:mysql://pocdemo.c7cyovgwfehj.us-east-1.rds.amazonaws.com:3306/payroll
 spring.datasource.username = jarvis12345
 spring.datasource.password = iamhappy1995
+#spring.datasource.url = jdbc:mysql://localhost:3306/payroll?useSSL=false
+#spring.datasource.username = root
+#spring.datasource.password = root
 
 
 ## Hibernate Properties
@@ -10,8 +13,7 @@ spring.datasource.password = iamhappy1995
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = update
 
 redis.port=6379
 redis.host=localhost
-#hello
