--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #server.port=8090
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://pocdemo.c7cyovgwfehj.us-east-1.rds.amazonaws.com:3306/payroll
-spring.datasource.username = jarvis12345
-spring.datasource.password = iamhappy1995
+spring.datasource.url = jdbc:mysql://muskandatabase.csusrt8jlg9v.ap-south-1.rds.amazonaws.com:3306/payroll
+spring.datasource.username = muskan
+spring.datasource.password = 72muskan#
 #spring.datasource.url = jdbc:mysql://localhost:3306/payroll?useSSL=false
 #spring.datasource.username = root
 #spring.datasource.password = root
